# python-es2021

./: README.md  hw02.py  hw03.py  hw04.py  hw05.py  hw06.py  hw07.py  hw08.py  hw10.py  hw11.py  hw12.py  hw13.py  hw14.py  hw15.py  hw15_myseismo.py  hwZZ_final.py  hwZZ_finalL46081028.py  pyproject.toml
hw08_material/: EQ_50km_M6.txt  USGS_20200928_20201028.csv
hw10_material/: judge.py
hw10_material/Pfiles/: 14052100.116  14052100.216  14052100.316  14052100.416  14052100.516  14052100.716  14052100.816  14052100.P16  14052104.116  14052104.216  14052104.316  14052104.P16  14052107.216  14052107.P16  14052111.116  14052111.P16  14052113.116  14052113.P16  14052115.116  14052115.216  14052115.P16  14052117.216  14052117.P16  14052120.216  14052120.P16  14052125.116  14052125.216  14052125.P16  14052128.P16  14052130.P16  14052132.116  14052132.216  14052132.316  14052132.P16  14052136.116  14052136.216  14052138.P16  14052140.116  14052140.216  14052140.P16  (+27 more)
hw11_material/: Caesar_cipher_test.txt  matrixA.txt  matrixB.txt  matrixout.txt
hw15_material/: MASB.txt  MASB_RTZ.txt  ev.info
hwZZ_material/: 2012_2020_M3EQ.cvs  class_grad.txt  grade_w1.txt  grade_w2.txt  text_dict.txt  text_dict_num.txt
